--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,24 +1,27 @@
 name: Windows Build
 
 on:
-  push:
-    branches:
-      - master
-      - development
-
   workflow_dispatch:
+
+  # Triggers the workflow when called by a top-level workflow
+  workflow_call:
+    inputs:
+      upload_artefacts:
+        type: boolean
+        required: false
+        default: false
+      build_configuration: # "Final"
+        type: string
+        required: false
+        default: "Final"
 
 env:
   # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: RTEA.sln
 
-  # Configuration type to build.
-  # You can convert this to a build matrix if you need coverage of multiple configuration types.
-  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-  BUILD_CONFIGURATION: "Final"
-
 jobs:
   build:
+    name: Windows Build
     runs-on: windows-latest
 
     steps:
@@ -31,11 +34,12 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration="${{env.BUILD_CONFIGURATION}}" ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration="${{inputs.build_configuration}}" ${{env.SOLUTION_FILE_PATH}}
 
-    - name: Upload Artifact2
+    - name: Upload Artifact
+      if: ${{inputs.upload_artefacts}}
       uses: actions/upload-artifact@v3
       with:
         name: Cortex Command.exe
         path: D:/a/Cortex-Command-Community-Project-Source/Cortex-Command-Community-Project-Data/Cortex Command x64.exe
-        if-no-files-found: warn
+        if-no-files-found: fail
