--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -1,22 +1,33 @@
 name: Meson Build (Linux, macOS)
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the development branch
-  push:
-    branches: [ master, development ]
-  release:
+  # Triggers the workflow when manually dispatched
   workflow_dispatch:
 
+  # Triggers the workflow when called by a top-level workflow
+  workflow_call:
+    inputs:
+      upload_artefacts:
+        type: boolean
+        required: false
+        default: false
+      build_type: # "release", "debug"
+        type: string
+        required: false
+        default: "release"
+      debug_level:  # "full", "minimal", "release" 
+      # TODO: Standardise these, so capitalization is preserved between the windows/linux builds.
+        type: string
+        required: false
+        default: "release"
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build-release-linux:
-    # The type of runner that the job will run on
+
+  build-linux:
+
     runs-on: ubuntu-latest
+    name: Linux Build
 
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -26,7 +37,7 @@ jobs:
         run: |
           sudo apt-get update -yq
           sudo apt-get install --no-install-recommends wget liballegro4-dev libloadpng4-dev libflac++-dev luajit-5.1-dev liblua5.2-dev libminizip-dev liblz4-dev libpng++-dev libx11-dev libboost-dev libtbb-dev libsdl2-dev libopengl-dev libfuse2 ninja-build
-          sudo pip install meson==0.60.0
+          sudo pip install meson==0.60.3
 
       - name: Install Clang
         # You may pin to the exact commit or the version.
@@ -36,26 +47,42 @@ jobs:
           # Set up cc/c++ executables
           cc: 1 # optional, default is 1
 
+      - name: Setup Meson
+        env:
+          CC: "gcc"
+          CXX: "g++"
+        run: |
+          meson setup --buildtype=${{inputs.build_type}} -Ddebug_type=${{inputs.debug_level}} build
+
+      - name: Configure for AppImage
+        if: ${{inputs.upload_artefacts}}
+        env:
+          CC: "gcc"
+          CXX: "g++"
+        run: meson configure -Dinstall_data=false -Dinstall_runner=false -Dfmod_dir=/usr/lib/ --prefix=/usr/ build
+          
       - name: Build
         env:
           CC: "gcc"
           CXX: "g++"
         run: |
-          meson setup --buildtype=release -Dinstall_data=false -Dinstall_runner=false -Dfmod_dir=/usr/lib/ --prefix=/usr/ build
           meson compile -C build
-
+        
       - name: Create AppDir
+        if: ${{inputs.upload_artefacts}}
         run: |
           echo "Setting output prefix"
           DESTDIR=${GITHUB_WORKSPACE}/build/AppDir meson install -C $GITHUB_WORKSPACE"/build"
 
       - name: Download linuxdeploy
+        if: ${{inputs.upload_artefacts}}
         working-directory: ${{env.GITHUB_WORKSPACE}}
         run: |
           wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage -O lindeploy
           chmod +x lindeploy
 
       - name: Create AppImage
+        if: ${{inputs.upload_artefacts}}
         working-directory: ${{env.GITHUB_WORKSPACE}}
         env:
           LD_LIBRARY_PATH: ./external/lib/linux/x86_64/
@@ -65,13 +92,16 @@ jobs:
           ./lindeploy --appdir=build/AppDir --output appimage
 
       - name: Upload Appimage
+        if: ${{inputs.upload_artefacts}}
         uses: actions/upload-artifact@v3
         with:
           name: CortexCommand (Linux)
           path: CortexCommand.AppImage
+          if-no-files-found: fail
 
-  build-release-macos:
+  build-macos:
     runs-on: macos-latest
+    name: MacOS Build
 
     steps:
       - uses: actions/checkout@v3
@@ -79,19 +109,21 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc ninja meson
-
+          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc@12 ninja meson
+          
       - name: Build
         env:
           CC: "gcc-12"
           CXX: "g++-12"
           LDFLAGS: "-static-libgcc -static-libstdc++"
         run: |
-          meson setup --buildtype=release -Ddebug_type=release build
+          meson setup --buildtype=${{inputs.build_type}} -Ddebug_type=${{inputs.debug_level}}  build
           meson compile -C build
 
       - name: Artifact Deploy
+        if: ${{inputs.upload_artefacts}}
         uses: actions/upload-artifact@v3
         with:
           name: CortexCommand (macOS)
           path: build/CortexCommand
+          if-no-files-found: fail
