ci: disable CI triggers on push to `master`
If it's there, it's far too late.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Continuous Integration
 on:
   # Triggers the workflow for pushes to master or development, for pull request events, and for the merge queue
   push:
-    branches: [master, development]
+    branches: [development]
   pull_request:
     types: [opened, reopened, ready_for_review, synchronize]
   merge_group:
