ci: correct artefact upload path for msbuild
New builds no longer have the trailing ` x64` on their exe filepath, removed so any build artefacts are correctly uploaded.

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -41,5 +41,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Cortex Command.exe
-        path: D:/a/Cortex-Command-Community-Project-Source/Cortex-Command-Community-Project-Data/Cortex Command x64.exe
+        path: D:/a/Cortex-Command-Community-Project-Source/Cortex-Command-Community-Project-Data/Cortex Command.exe
         if-no-files-found: error
