--- a/Menus/meson.build
+++ b/Menus/meson.build
@@ -10,6 +10,7 @@ sources += files(
 'MetagameGUI.cpp',
 'ModManagerGUI.cpp',
 'ObjectPickerGUI.cpp',
+'PauseMenuGUI.cpp',
 'ScenarioActivityConfigGUI.cpp',
 'ScenarioGUI.cpp',
 'SceneEditorGUI.cpp',
