--- a/RTEA.vcxproj
+++ b/RTEA.vcxproj
@@ -605,6 +605,7 @@
     <ClInclude Include="Managers\WindowMan.h" />
     <ClInclude Include="Menus\LoadingScreen.h" />
     <ClInclude Include="Menus\ModManagerGUI.h" />
+    <ClInclude Include="Menus\PauseMenuGUI.h" />
     <ClInclude Include="Menus\ScenarioActivityConfigGUI.h" />
     <ClInclude Include="Menus\SettingsAudioGUI.h" />
     <ClInclude Include="Menus\SettingsGameplayGUI.h" />
@@ -835,6 +836,7 @@
     <ClCompile Include="Managers\WindowMan.cpp" />
     <ClCompile Include="Menus\LoadingScreen.cpp" />
     <ClCompile Include="Menus\ModManagerGUI.cpp" />
+    <ClCompile Include="Menus\PauseMenuGUI.cpp" />
     <ClCompile Include="Menus\ScenarioActivityConfigGUI.cpp" />
     <ClCompile Include="Menus\SettingsAudioGUI.cpp" />
     <ClCompile Include="Menus\SettingsGameplayGUI.cpp" />
