Re-add VS Code editor files to `.gitignore`
This effectively stages their changes but retains their ignored state.

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,4 @@ compile_commands.json
 MemCleanupInfo.txt
 RTEA.vcxproj.user
 .DS_Store
-.vscode/**
-
-!.vscode/tasks.json
-!.vscode/launch.json
+.vscode
