ensure that configuration task runs before build sequences
Enable serial dependent execution in the top-level task.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,13 @@
   "tasks": [
     {
       "label": "Build Debug",
-      "dependsOn": ["Configure Debug", "Meson: Build all targets"]
+      "dependsOn": ["Configure Debug", "Meson: Build all targets"],
+      "dependsOrder": "sequence"
     },
     {
       "label": "Build Release",
-      "dependsOn": ["Configure Release", "Meson: Build all targets"]
+      "dependsOn": ["Configure Release", "Meson: Build all targets"],
+      "dependsOrder": "sequence"
     },
     {
       "label": "Configure Debug",
