Auto-run `meson setup` on editor startup, update readme

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,6 +3,9 @@
   "tasks": [
     {
         "label": "Setup Meson",
+        "runOptions": {
+          "runOn": "folderOpen"
+        },
         "type": "process",
         "problemMatcher": ["$meson-gcc"],
         "command": "meson",
