add raknet windows configurations

--- a/external/sources/RakNet/meson.build
+++ b/external/sources/RakNet/meson.build
@@ -3,7 +3,16 @@ subdir('src')
 
 raknet_include = include_directories('.', 'include')
 
-raknet = static_library('raknet', raknet_src, include_directories: raknet_include, cpp_args:['-w'], override_options:['cpp_std=c++03'])
+cxx = meson.get_compiler('cpp')
+
+if cxx.get_argument_syntax() == 'gcc'
+  cpp_args = ['-w', '-fpermissive']
+elif cxx.get_argument_syntax() == 'msvc'
+  cpp_args = ['-permissive', '-DBOOST_BIND_GLOBAL_PLACEHOLDERS=1', '-DLUABIND_BUILDING', '-D_ITERATOR_DEBUG_LEVEL=0']
+  cpp_options = ['cpp_std=vc++20']
+endif
+
+raknet = static_library('raknet', raknet_src, include_directories: raknet_include, cpp_args: cpp_args, override_options: ['warning_level=0']+cpp_options)
 
 raknet_dep = declare_dependency(link_with: raknet, include_directories: raknet_include)
 
