--- a/Managers/meson.build
+++ b/Managers/meson.build
@@ -33,4 +33,4 @@ else
 error('Unsupported compiler')
 endif
 
-luaman = static_library('LuaMan', 'LuaMan.cpp', dependencies:deps + luabind_dep, include_directories: source_inc_dirs, cpp_args: luaman_cpp_args, cpp_pch:pch, override_options: defaults_override)
+luaman = static_library('LuaMan', 'LuaMan.cpp', dependencies:deps + luabind_dep, include_directories: [source_inc_dirs, external_inc_dirs], cpp_args: luaman_cpp_args, cpp_pch:pch, override_options: defaults_override)
